update install script.