@@ -1,13 +1,17 @@
 machineId=机器id
 agentJarPath=agent文件路径
-pluginPath=$HOME/orion-ops/plugins
-killTag=machine-monitor-agent
-logPath=$pluginPath/machine-monitor-agent.out
-scriptPath=$pluginPath/start-machine-monitor-agent.sh
-echo "eof=$\"\n\"
-ps -ef | grep ${killTag} | grep -v grep | awk '{print \$2}' | xargs kill -9 || echo \$?
-nohup java -jar ${agentJarPath} --machineId=${machineId} --spring.profiles.active=prod 2>&1 >> ${logPath} &
-eof=\$(echo -e \$eof)
-echo \$eof" > ${scriptPath}
-chmod 777 ${scriptPath}
-${scriptPath}
+AGENT_PROCESS=machine-monitor-agent
+STARTED=`ps -ef | grep $AGENT_PROCESS | grep '.jar' | grep -v grep | awk '{print $2}' | wc -l`
+PID=`ps -ef | grep $AGENT_PROCESS | grep '.jar' | grep -v grep | awk '{print $2}'`
+# KILL
+if [ $STARTED -eq 0 ]
+then
+    echo "agent not started"
+else
+    echo "kill pid $PID"
+    kill -9 $PID
+fi
+echo 'starting ' $AGENT_PROCESS '....'
+# START
+nohup java -jar -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=56m -Xms128m -Xmx128m -Xmn32m -Xss256k -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC ${agentJarPath} --machineId=${machineId} --spring.profiles.active=prod >/dev/null 2>&1 &
+echo 'agent started result: ' $?
